syntax = "proto3";

package control;
option go_package = "./control";

message Close {
  enum Code {
    HeartbeatTimeout = 0; // 心跳超时
    ServerError = 1; // 服务端错误
    ServerShutdown = 2; // 服务端关闭
    UnpackError = 3; // 数据截取错误
    AuthError = 4; // 鉴权失败
  }
  Code code = 1;
  string reason = 2;
}

message Heartbeat {
  int64 timestamp = 1;
}

message AuthRequest {
  AuthInfo auth_info = 1;
}

message AuthResponse {
  AuthInfo auth_info = 1;
}

message AuthInfo {
  string user_name = 1;
  string passward = 2;
  string client_name = 3;
}

message SubscribeRequest {
  bool all = 1;
  repeated string counter_ids = 2;
  int64 span_index = 3;
}

message LinkError {
  uint64 code = 1;
  string msg = 2;
}
